Snapshot 1wx1_3 (2)
2nd half of Snapshot 1wx1_3.

*Updated variables, methods, and classes to match the proper case in coding

Replaced messageHandler with MessageProcessor..

Please note the console isnt working entirely yet. Still working on fixing this issue.

messageHandler has not yet been removed but it has no more references